example/fail/fail_type.dl
int $[gcd : int a , int b ]{
    $[ hla_stdout_puti32 : a ];
    $[ hla_stdout_putc : 32 ];
    $[ hla_stdout_puti32 : b ];
    $[ hla_stdout_putc : 10 ];
    if (b==0)
        return a;
    return $[gcd : b , a%b ];
}

int $[main]{
    string x ;
    string y ;
    $[ hla_stdout_puti32 : $[ gcd : x , y ] ]; #invalid argument type
    
}

